<resources>
    <string name="app_name">라이어 게임 메이커</string>
    <string name="login_signin_button">로그인</string>
    <string name="login_about_button">라이어 게임이란?</string>

    <string name="profile_nickname_hint">닉네임</string>
    <string name="profile_nickname_save">내정보 저장</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">라이어 게임</string>
    <string name="title_offline_history">오프라인 게임</string>
    <string name="title_profile">내정보</string>

    <string name="main_start_game">게임 시작하기</string>
    <string name="main_start_new_game">새로운 게임 만들기</string>
    <string name="main_start_exit_game">오프라인 게임 참여하기</string>

    <string name="game_generate_title">게임 이름</string>
    <string name="game_generate_mode_online">온라인</string>
    <string name="game_generate_mode_offline">오프라인</string>
    <string name="game_generate_password">비밀번호</string>
    <string name="game_generate_private">비밀방</string>
    <string name="game_generate_button">게임 시작하기</string>

    <string name="game_room_deleted_message">게임방을 찾을 수 없습니다.</string>

    <string name="master_menu_title">마스터 메뉴</string>
    <string name="master_menu_start_game">게임 시작</string>
    <string name="master_menu_change_master">마스터 변경</string>
    <string name="master_menu_make_game">게임 만들기</string>
    <string name="master_menu_make_button">만들기</string>
    <string name="master_menu_make_category">카테고리</string>
    <string name="master_menu_make_keyword">키워드</string>
    <string name="master_menu_make_error_keyword">카테고리와 키워드를 입력하셔야 합니다.</string>

    <string name="notification_user_entered">%s님이 입장 하셨습니다.</string>
    <string name="notification_user_leave">%s님이 퇴장 하셨습니다.</string>

    <string name="game_text_normal">당신은 시민 입니다.</string>
    <string name="game_text_liar">당신은 라이어 입니다.</string>
    <string name="game_text_non_member">이전에 진행된 게임입니다.</string>
    <string name="game_text_category">카테고리</string>
    <string name="game_text_keyword">키워드</string>

</resources>


