<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="com.duckkite.android.liargamemaker.data.model.GameMode" />

        <variable
            name="viewModel"
            type="com.duckkite.android.liargamemaker.ui.game.generate.GameGenerateViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.game.generate.GameGenerateActivity">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <RadioGroup
                    android:id="@+id/gameModeGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checkedButton="@id/gameModeOnLine"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent">

                    <RadioButton
                        android:id="@+id/gameModeOnLine"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="@{() -> viewModel.setGameMode(GameMode.ONLINE)}"
                        android:text="@string/game_generate_mode_online" />

                    <RadioButton
                        android:id="@+id/gameModeOffLine"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="@{() -> viewModel.setGameMode(GameMode.OFFLINE)}"
                        android:text="@string/game_generate_mode_offline" />
                </RadioGroup>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/gameNameTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/gameRoomName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/game_generate_title"
                        android:inputType="textPersonName"
                        android:maxLength="20"
                        android:text="@={viewModel.gameRoomName}" />
                </com.google.android.material.textfield.TextInputLayout>

                <Switch
                    android:id="@+id/privateSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:checked="@={viewModel.private}"
                    android:text="@string/game_generate_private"
                    android:visibility="@{viewModel.gameMode == GameMode.ONLINE ? View.VISIBLE : View.GONE}" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/gamePwInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:enabled="@{privateSwitch.checked}"
                    android:visibility="@{viewModel.gameMode == GameMode.ONLINE ? View.VISIBLE : View.GONE}"
                    app:counterEnabled="true"
                    app:counterMaxLength="8"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/gamePassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/game_generate_password"
                        android:inputType="numberPassword"
                        android:maxLength="8"
                        android:text="@={viewModel.gameRoomPassword}" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/gameGenerateButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:enabled="@{viewModel.gameRoomName.trim().length() > 0}"
                    android:onClick="@{() -> viewModel.generateGame()}"
                    android:text="@string/game_generate_button" />
            </LinearLayout>
        </ScrollView>
        <ProgressBar
            android:id="@+id/loadIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>